--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  </head>
  <body>
    <h1>Um pouquinho sobre mim:</h1>
-   <a href="#texto1">link1</a>  
-   <a href="#texto2">link2</a>  
+   <a href="#texto1">Hobbies</a>  
+   <a href="#texto2">Rotina</a>  
    <br>
    <br>
    <br>
@@ -65,7 +65,6 @@
      <li>Continuo em tranquilidade até a hora de dormir;</li> 
      <li>Vou dormir, me preparar para mais um dia de luta.</li>
    </ol> 
-   <h2>Para terminar, aí vai uma fotinha pra "embelezar" a página</h2>
-   
+   <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg" alt="Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo
  </body>
 </html>
