--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
      <li>Continuo em tranquilidade até a hora de dormir;</li> 
      <li>Vou dormir, me preparar para mais um dia de luta.</li>
    </ol> 
-   <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg" alt="Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo
+   <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg" alt="Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo">
  </body>
 </html>
