--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
    <h1>Um pouquinho sobre mim:</h1>
    <a href="#texto1">Hobbies</a>  
    <a href="#texto2">Rotina</a>  
+   <a href="https://fboldt.github.io/">Link para um site incrível</a> 
+   <a href="index2.html">Clique aqui para ter recomendações de ótimos livros</a>
    <br>
    <br>
    <br>
