--- a/index2.html
+++ b/index2.html
@@ -17,9 +17,9 @@
     <h1>Recomentações de livros, por mim:</h1>
     <ul>
       <li>Harry Potter e a Câmara Secreta(toda a saga, na verdade)</li>
-      <li>A Elite(junto com toda a saga de A Seleção),/li>
+      <li>A Elite(junto com toda a saga de A Seleção),</li>
       <li>O Conde de Monte Cristo (leitura difícil, mas cativante)</li>
-      <li>Em Chamas(novamente, toda a saga, mas eese tem um lugarzinho0 especial no coração</li>
+      <li>Em Chamas(novamente, toda a saga, mas eese tem um lugarzinho especial no coração</li>
     </ul>  
     <br>
       <p>De verdade, leia! Faz bem pro psicológico e também para a mente</p>
