--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   body {
 		font-family: Arial, Helvetica, sans-serif;
 	}
-	ul, ol {
+	ul {
+	    list-style-type: circle;
+	    color: brown;
+	}
+	ol {
+	    list-style-type: lower-roman;
 	    color: black;
 	}
 	h1 {
