--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
  <title>Euzinha</title> 
    <style type="text/css">
   body {
-		font-family: Arial, Helvetica, sans-serif;
+	    background-color: MediumSlateBlue;
+	    font-family: Arial, Helvetica, sans-serif;
 	}
 	ul {
+	    background-color: white;
 	    list-style-type: circle;
-	    color: brown;
+	    color: blueviolet;
 	}
 	ol {
+	    background-color: white;
 	    list-style-type: lower-roman;
-	    color: black;
+	    color: blueviolet;
 	}
 	h1 {
     font-family: FreeMono, monospace;
