--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	}
 	h1 {
     font-family: FreeMono, monospace;
-    color: blueviolet;
+    color: Indigo;
   }
   h2 {
-	    color: blue;
+	    color: Indigo;
 	}
 	</style>
  </head>
