--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   h2 {
 	    color: Indigo;
 	}
+  img {
+	  width: 1000px;
+	}
 	</style>
  </head>
  <body>
@@ -75,6 +78,12 @@
      <li>Continuo em tranquilidade até a hora de dormir;</li> 
      <li>Vou dormir, me preparar para mais um dia de luta.</li>
    </ol> 
-   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg/320px-Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg" alt="Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo">
+   <section>
+     <figure>
+	<figcaption>Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo</figcaption> 
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg/320px-Silhouette_of_an_island_at_dusk_with_purple_sky_and_clouds_in_Don_Det_Si_Phan_Don_Laos.jpg" 
+	 alt="Uma fotinha pra registrar duas outras coisas que amo: o céu e roxo">
+     </figure>	     
+   </section>	   
  </body>
 </html>
