--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
  </head>
  <body>
    <h1>Um pouquinho sobre mim:</h1>
-   <a href="#texto1">Hobbies</a>  
-   <a href="#texto2">Rotina</a>  
-   <a href="https://fboldt.github.io/">Link para um site incrível</a> 
-   <a href="index2.html">Clique aqui para ter recomendações de ótimos livros</a>
+   <a href="#texto1">Hobbies</a><br>  
+   <a href="#texto2">Rotina</a><br>  
+   <a href="https://fboldt.github.io/">Link para um site incrível</a><br> 
+   <a href="index2.html">Recomendações de ótimos livros</a><br>
+   <a href="amigos.html">Quer fazer amizade?</a>
    <br>
    <br>
    <br>
