--- a/amigos.html
+++ b/amigos.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>replit</title>
+  <title>Conhecendo você</title>
   <style>
     body{
       font-family: arial;
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>Teste de amizade</h1>
+  <h1>Hora de falar sobre <b>vc</b>!!!</h1>
   <p>Preencha o formulário para saber se vc poderia ser meu amigo(a)</p>
   <p><b>OBS:</b>As perguntas estão organizadas pelo nível de impacto na minha opinião, não na da sociedade</p>
   <form>
