--- a/amigos.html
+++ b/amigos.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Conhecendo você</title>
+  <link rel="stylesheet" href="estilos.css">
   <style>
     body{
       font-family: arial;
