--- a/amigos.html
+++ b/amigos.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Conhecendo você</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
